syntax = "proto3";

package components;

option go_package = "/components";

import "components/dataclassification.proto";

import "google/protobuf/timestamp.proto";

message Supplies {
  repeated Fuel fuel = 1;
}

message Fuel {
  optional string fuelId = 1;
  optional string name = 2;
  optional google.protobuf.Timestamp reportedDate = 3;
  optional uint32 amountGallons = 4;
  optional uint32 maxAuthorizedCapacityGallons = 5;
  optional uint32 operationalRequirementGallons = 6;
  optional DataClassification dataClassification = 7;
  optional string dataSource = 8;
}
